--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,22 @@
   "display": "standalone",
   "background_color": "#064D95",
   "theme_color": "#064D95",
+  "orientation": "portrait-primary",
+  "description": "The dating app that only works when you go out. No swiping, no ghosting — just real-time connection.",
+  "lang": "en-US",
+  "scope": "/",
   "icons": [
     {
       "src": "le-libido-icon.png",
       "sizes": "1024x1024",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
+  ],
+  "permissions": [
+    "geolocation",
+    "notifications",
+    "background-sync",
+    "push"
   ]
 }
