--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,14 @@
   "short_name": "Le Libido",
   "start_url": "/pwa-download.html",
   "display": "standalone",
+  "background_color": "#064D95",
+  "theme_color": "#064D95",
   "orientation": "portrait-primary",
-  "background_color": "#000000",
-  "theme_color": "#000000",
   "lang": "en-US",
   "description": "The dating app that only works when you go out. No swiping, no ghosting — just real-time connection.",
-  "scope": "/",
   "icons": [
     {
-      "src": "le-libido-icon.png",
+      "src": "/le-libido-icon.png",
       "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "any maskable"
