--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "le-libido-icon.png",
+      "src": "/le-libido-icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "le-libido-icon.png",
+      "src": "/le-libido-icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
