--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "license": "UNLICENSED",
+  "engines": { "node": ">=18" },
   "dependencies": {
     "stripe": "^16.0.0"
   }
